fix page bg and forms release 1.3.0

--- a/docs/_media/theme.1.3.0.scss
+++ b/docs/_media/theme.1.3.0.scss
@@ -1,3 +1,11 @@
+/* -----------------------------------------------------------------------------
+ * Base-L: Docs - Theme
+ * -----------------------------------------------------------------------------
+ * @author: hanakin -- midaym
+ * @version: 1.3.0
+
+ * --------------------------------------------------------------------------- */
+
 // 1. Global Settings
 //-------------------------
 @import '../../src/scss/settings/color';
