--- a/src/scss/core.1.3.0.scss
+++ b/src/scss/core.1.3.0.scss
@@ -1,9 +1,9 @@
 
 /* -----------------------------------------------------------------------------
- * Base-L: Core - Dark
+ * Base-L: Core - Light
  * -----------------------------------------------------------------------------
  * @author: hanakin -- midaym
- * @version: 1.2.0
+ * @version: 1.3.0
 
  * --------------------------------------------------------------------------- */
 
@@ -83,7 +83,7 @@
 //-------------------------
 @import 'settings/color';
 @import 'settings/default';
-@import 'settings/dark';
+@import 'settings/light';
 
 
 // 2. Tools
