--- a/src/scss/base/_global.scss
+++ b/src/scss/base/_global.scss
@@ -2,7 +2,7 @@
 // @base: Global
 //------------------------------------------------------------------------------
 // @author: hanakin -- midaym
-// @version: 1.1.0
+// @version: 1.3.0
 // @description:
 //
 // High-level, page-level styling.
@@ -23,6 +23,6 @@ body {
 	font-size: $default-font-size; // [1]
 	font-weight: 400;
 	line-height: unit-less($default-line-height); // [1]
-	background-color: $default-page-bg;
+	background-color: $default-page-color;
 	color: $default-background-item-color;
 }
